[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/FontLarge.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/FontMedium.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/Screens/PlaySelectScreen.gd" type="Script" id=4]

[node name="PlaySelectScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Bg" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 4, 4 )
mouse_filter = 2
color = Color( 0.329412, 0.454902, 0.607843, 1 )

[node name="Title" type="Label" parent="UI"]
margin_left = 128.0
margin_top = 24.0
margin_right = 512.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
text = "Select a Mode"
align = 1

[node name="ReturnLabel" type="Label" parent="UI"]
margin_left = 64.0
margin_top = 296.0
margin_right = 576.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 2 )
text = "Press Esc to go back"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -28.0
margin_right = 192.0
margin_bottom = 28.0
theme = ExtResource( 3 )

[node name="StartButton" type="Button" parent="UI/Buttons"]
unique_name_in_owner = true
margin_left = 15.0
margin_right = 175.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 56 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="PracticeButton" type="Button" parent="UI/Buttons"]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 369.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 56 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "Practice"

[connection signal="pressed" from="UI/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/Buttons/PracticeButton" to="." method="_on_PracticeButton_pressed"]
